crates/oxc_css_parser/tests/error/value/bad-string.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: unterminated string
  ┌─ bad-string.css:2:12
  │
2 │   content: "
  │            ^


